--- a/src/components/Layout/Header/style.module.css
+++ b/src/components/Layout/Header/style.module.css
@@ -15,6 +15,9 @@
 
 .Logo{
     margin-right: auto;
+    display: flex;
+    justify-content: center; /* 세로 중앙 정렬 */
+    align-items: center;
 }
 
 .TopNavigationBar {
