--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 @import "normalize.css";
+@import "fonts.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -11,7 +12,7 @@
     --breakpoint-lg: 1200px;
     --border-radius: 1rem;
     --page-width: 50.5rem;
-    --page-padding: 2rem 3.5rem;
+    --page-padding: 5rem 3.5rem;
     --header-height: 4.25rem;
     --footer-height: 7.5rem;
 }
@@ -35,7 +36,7 @@ body {
     color: var(--text-color);
     font-size: 1rem;
     font-family: var(--base-font);
-    line-height: 1.5rem;
+    line-height: 1.7rem;
     font-weight: 400;
     text-rendering: optimizeLegibility;
 }
