--- a/src/components/Layout/style.module.css
+++ b/src/components/Layout/style.module.css
@@ -2,7 +2,9 @@
     position: relative;
 
     width: 100%;
-    min-height: 100%;
+    height: 100vh;
+
+    min-width: 300px;
 }
 
 .BodyWrapper{
@@ -10,7 +12,7 @@
 
     width: 100%;
     max-width: var(--page-width);
-    min-height: calc(100vh - var(--header-height));
+    min-height: calc(100vh);
     margin: 0 auto;
 
     background: #ffffff;
