--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -143,3 +143,48 @@ deckgo-highlight-code {
     --deckgo-highlight-code-font-size: 0.9rem;
     --deckgo-highlight-code-carbon-box-shadow: null;
 }
+
+/* Blog Theme*/
+.Blog ul{
+    @apply
+    m-2
+
+    px-6
+    py-3
+
+    list-inside
+    list-disc
+    bg-gray-50
+}
+
+.Blog table{
+    @apply
+    border
+
+    m-2
+}
+
+.Blog code{
+    @apply
+    px-1
+    rounded-2xl
+
+    text-violet-950
+    bg-gray-100
+
+}
+
+.Blog h3{
+    @apply
+    mt-12
+    mb-4
+}
+
+
+.Blog table td,
+.Blog table th{
+    @apply
+    border
+    px-2
+    py-2
+}
