--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -147,8 +147,10 @@ deckgo-highlight-code {
 /* Blog Theme*/
 .Blog ul{
     @apply
-    m-2
+    mx-auto
+    overflow-x-auto
 
+    m-2
     px-6
     py-3
 
