--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -159,6 +159,20 @@ deckgo-highlight-code {
     bg-gray-50
 }
 
+.Blog ol{
+    @apply
+    mx-auto
+    overflow-x-auto
+
+    m-2
+    px-6
+    py-3
+
+    list-inside
+    list-decimal
+    bg-gray-50
+}
+
 .Blog code{
     @apply
     px-1
